tests/ui/emit.rs
extern crate test_crate;
use test_crate::*;

emit!(one, two, three, four);

fn main() {}
